# RekrutacjaSolvro

./: .gitignore  README.md
AI_ML/Research/: CMakeLists.txt  CMakePresets.json  README.md  Research.cpp  Research.h  requirements.txt
AI_ML/Research/notebooks/: Untitled.ipynb
AI_ML/Research/scripts/: exportModel.py  gradcam.py  plotReults.py
AI_ML/Research/src/data/: ImageDataset.cpp  ImageDataset.h  ImageDatasetConfig.h  ImageTypes.h
AI_ML/Research/src/models/: Classifier.cpp  Classifier.h  ModelLoader.cpp  ModelLoader.h
AI_ML/Research/src/training/: Trainer.cpp  Trainer.h  metrics.cpp  metrics.h
ProjectMenagment/: Czesc2.md  README.md
